--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link  rel="icon" type="image/svg+xml" href="/DAVID .jpg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Flutter Payment</title>
+    <title>David Olayiwola</title>
   </head>
   <body style="background-color: black;">
     <div id="root"></div>
